======================
Changes for Crate Data
======================

unreleased
==========


2014/03/07 0.2.4
================

 - Fix FF bug related to mixed-content on the tutorial view.
 - Do not abort table info fetching when a node goes down and /_sql does not respond.


2014/03/06 0.2.3
================

 - Remove obsolete code and refactor ClusterStatus, Overview.


2014/03/04 0.2.2
================

 - Filter system tables differently.

2014/03/04 0.2.1
================

 - Fix display issues

2014/03/04 0.2.0
================

 - Add a "Get started" section that imports tweets

 - Fix table ordering


2014/03/04 0.1.2
================

 - Insert new TableInfoView items in alphabetic order


2014/02/27 0.1.1
================

 - Fix TableInfoView when a displayed table is removed. Show/hide properly
   "No tables available" when a table is removed


2014/02/27 0.1.0
================

 - Handle edge case where there are no tables in overview, table view

 - Fix load graph to behave with bootstrap/jQuery

 - Allow for multiple views in the content area


2014/02/26 0.0.9
================

 - Fix visual glitches for different devices and screen widths

 - Show graph of load over time on Overview view

 - Handle add/remove events of nodes on the Cluster view

 - Handle add/remove events of tables on the TableList view

 - Use URL fragments for navigation, disable pushState

 - Sort tables and cluster nodes by health then alphabetically


2014/02/26 0.0.8
================

 - Update logo

 - Refactor top and left navbars

 - Cluster list: Stop highlighting node names

 - Improved responsive behaviour

 - Repaired visual style glitches

 - Refresh Table & Cluster views

 - Auto select first item in Table and Cluster views

 - Refresh Tables & Cluster views

 - Display json objects on sql results


2014/02/25 0.0.7
================

 - Completed table info view

 - Complete cluster view

 - fixed error console not reseting on a new query

2014/02/25 0.0.6